--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "floordoor-records",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://allanpichardo.github.io/floordoorrecords",
+  "homepage": "https://www.floordoorrecords.com",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -10,7 +10,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "slugify": "^1.3.6"
   },
   "scripts": {
     "start": "react-scripts start",
